color and class

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="lv">
+<style>
+    p {
+        color: aquamarine;
+    }
+
+    .article {
+        color: brown;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +17,8 @@
 </head>
 <body>
     <h1>Mana lapa!</h1>
-    <p>Mani sauc Deniss</p>
+    <p style="color: red";>Mani sauc Deniss</p>
+    <p>Man ir 17</p>
+    <p class="article">Es macos RVT</p>
 </body>
 </html>
